fixing img path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <h1>{{author}}</h1>
 <app-my-component></app-my-component>
-<img [src]="imgSource">
+<img [src]="imgSource" style="width: 15px; height: 15px">
 
 <!-- if enable === true then button is disabled -->
 <!-- if enable === false then button is enabled -->
